--- a/src/lib/modules/tree-head/tree-head.component.html
+++ b/src/lib/modules/tree-head/tree-head.component.html
@@ -14,7 +14,7 @@
   <th *ngFor="let column of columns" [ngClass]="{'column-hide': column.hidden}" [attr.width]="column.width">
     <div>{{column.header}}</div>    
   </th>
-  <th *ngIf="internal_configs.show_parent_col || internal_configs.show_add_row">
+  <th *ngIf="(configs.show_parent_on_edit && internal_configs.show_parent_col) || internal_configs.show_add_row">
     Parent
   </th>
 </tr>
