Add Events for selections.

--- a/src/lib/angular-tree-grid.component.html
+++ b/src/lib/angular-tree-grid.component.html
@@ -5,6 +5,8 @@
         [expand_tracker]="expand_tracker"
         [internal_configs]="internal_configs"
         [edit_tracker]="edit_tracker"
+        [rowselectall]="rowselectall"
+        [rowdeselectall]="rowdeselectall"
         [columns]="columns"
         [configs]="configs">
     </thead>
@@ -24,6 +26,7 @@
         [rowsave]="rowsave"
         [rowadd]="rowadd"
         [rowselect]="rowselect"
+        [rowdeselect]="rowdeselect"
     >        
     </tbody>
 </table>
