--- a/src/lib/modules/tree-body/components/subgrid/subgrid.component.html
+++ b/src/lib/modules/tree-body/components/subgrid/subgrid.component.html
@@ -1,31 +1,47 @@
 <ng-container *ngIf="expand_tracker[row_data.parent_pathx]">
-  <td *ngIf="configs.multi_select" class="checkbox_column">
-    <input type="checkbox" [checked]="row_data.row_selected" (click)="selectRowOnCheck(row_data, $event)">
-  </td>
-  <td db-tree-cell-actions 
-    *ngIf="(configs.actions.edit || configs.actions.delete || configs.actions.add)" 
-    [row_data]="row_data"
-    [configs]="configs"
-    [store]="store"
-    [edit_tracker]="edit_tracker"
-    [internal_configs]="internal_configs"
-    [rowdelete]="rowdelete"
-    (canceledit)="cancelEdit($event)" 
-    (editcomplete)="saveRecord($event)">
-  </td>
-  <td *ngFor="let column of configs.columns; index as i" [ngClass]="{'column-hide': column.hidden}">
-    <db-tree-cell
-      [configs]="configs"
-      [column]="column"
-      [index]="i"
-      [row_data]="row_data"
-      [expand_tracker]="expand_tracker"
-      [edit_on]="edit_tracker[row_data[configs.id_field]]"
-      [cellclick]="cellclick"
-      (rowexpand)="onRowExpand($event)"
-      (rowcollapse)="onRowCollapse($event)"
-      (editcomplete)="saveRecord($event)"
-    >
-    </db-tree-cell>
-  </td>
+  <ng-container *ngIf="!row_data.leaf">
+    <td *ngFor="let column of configs.columns; index as i" [ngClass]="{'column-hide': column.hidden}">
+      <db-tree-cell
+        [configs]="configs"
+        [column]="column"
+        [index]="i"
+        [row_data]="row_data"
+        [expand_tracker]="expand_tracker"
+        [edit_on]="edit_tracker[row_data[configs.id_field]]"
+        [cellclick]="cellclick"
+        (rowexpand)="onRowExpand($event)"
+        (rowcollapse)="onRowCollapse($event)"
+        (editcomplete)="saveRecord($event)"
+      >
+      </db-tree-cell>
+    </td>
+  </ng-container>
+  <ng-container *ngIf="row_data.leaf">
+    <td colspan="2">
+        <table width="100%">
+            <thead>
+              <tr>
+                <th *ngFor="let column of configs.subgrid_config.columns">
+                  {{column.header}}
+                </th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let child_data of row_data.children">
+                <td *ngFor="let column of configs.subgrid_config.columns; index as i">
+                    <db-tree-cell
+                      [configs]="configs"
+                      [column]="column"
+                      [index]="i"
+                      [row_data]="child_data"
+                      [expand_tracker]="expand_tracker"
+                      [cellclick]="cellclick"
+                    ></db-tree-cell>
+                </td>
+              </tr>
+            </tbody>
+            
+          </table>
+    </td>    
+  </ng-container>  
 </ng-container>
