--- a/src/lib/modules/tree-body/components/subgrid/subgrid.component.scss
+++ b/src/lib/modules/tree-body/components/subgrid/subgrid.component.scss
@@ -1,4 +1,5 @@
 @import '../../tree-body.component.scss';
+@import '../../../tree-head/tree-head.component.scss';
 
 td {
     border: 1px solid #cdd5dc;
@@ -11,8 +12,12 @@ td {
         text-align: center;
     }
 
-    &:nth-child(1) {
+    &.expand-column {
         padding: 0.3rem;
+    }
+
+    &.subgrid-column {
+        padding: 0 0 0 0;
     }
 
     &.column-hide {
@@ -26,4 +31,9 @@ td {
     &.clear-right-border {
         border-right: 0 !important;
     }
+
+    table {
+        border-collapse: collapse;
+    }
 }
+
