--- a/src/lib/modules/tree-body/tree-body.component.html
+++ b/src/lib/modules/tree-body/tree-body.component.html
@@ -23,6 +23,7 @@
 <ng-container *ngIf="configs.subgrid">
   <tr db-subgrid
   *ngFor="let row_data of display_data"
+  class="subgrid-row"
   [configs]="configs" 
   [internal_configs]="internal_configs" 
   [expand_tracker]="expand_tracker" 
@@ -46,7 +47,7 @@
       <input type="checkbox" [checked]="row_data.row_selected" (click)="selectRowOnCheck(row_data, $event)">
     </td>
     <td db-tree-cell-actions 
-      *ngIf="(configs.actions.edit || configs.actions.delete || configs.actions.add)" 
+      *ngIf="(configs.actions.edit || configs.actions.delete || configs.actions.add)"
       [row_data]="row_data"
       [configs]="configs"
       [store]="store"
@@ -56,7 +57,8 @@
       (canceledit)="cancelEdit($event)" 
       (editcomplete)="saveRecord($event)">
     </td>
-    <td *ngFor="let column of columns; index as i" [ngClass]="{'column-hide': column.hidden}">
+    <td *ngFor="let column of columns; index as i" 
+    [ngClass]="{'column-hide': column.hidden, 'expand-column': i == 0}">
       <db-tree-cell
         [configs]="configs"
         [column]="column"
