--- a/src/lib/modules/tree-body/components/subgrid/subgrid.component.html
+++ b/src/lib/modules/tree-body/components/subgrid/subgrid.component.html
@@ -29,14 +29,19 @@
             <tbody>
               <tr *ngFor="let child_data of row_data.children">
                 <td *ngFor="let column of configs.subgrid_config.columns; index as i">
-                    <db-tree-cell
-                      [configs]="configs"
-                      [column]="column"
-                      [index]="i"
-                      [row_data]="child_data"
-                      [expand_tracker]="expand_tracker"
-                      [cellclick]="cellclick"
-                    ></db-tree-cell>
+                  <db-tree-cell
+                    [configs]="configs"
+                    [column]="column"
+                    [index]="i"
+                    [row_data]="child_data"
+                    [expand_tracker]="expand_tracker"
+                    [cellclick]="cellclick"
+                  ></db-tree-cell>
+                </td>
+              </tr>
+              <tr *ngIf="configs.subgrid_config.show_summary_row">
+                <td *ngFor="let column of configs.subgrid_config.columns">
+                  <div [innerHTML]="column.summary_renderer && column.summary_renderer(row_data.children)"></div>
                 </td>
               </tr>
             </tbody>
