--- a/src/lib/modules/tree-body/components/subgrid/subgrid.component.scss
+++ b/src/lib/modules/tree-body/components/subgrid/subgrid.component.scss
@@ -32,8 +32,9 @@ td {
         border-right: 0 !important;
     }
 
-    table {
+    table.subgrid-table {
         border-collapse: collapse;
+        width: 100%;
     }
 }
 
