Fix input size issue.

--- a/src/lib/modules/tree-body/tree-body.component.scss
+++ b/src/lib/modules/tree-body/tree-body.component.scss
@@ -18,7 +18,7 @@ tr {
         background: #fafbff;
     }
     &.subgrid-row {
-        background: #f8f8f8;
+        background: #fcfcfc;
     }
 
     td {
