--- a/src/lib/modules/tree-body/components/subgrid/subgrid.component.scss
+++ b/src/lib/modules/tree-body/components/subgrid/subgrid.component.scss
@@ -57,7 +57,7 @@ td {
                 border-right: 5px solid transparent;                
                 border-bottom: 6px solid $sort-color;
                 position: relative;
-                top: -16px;
+                top: -18px;
     
                 &.active {
                     border-bottom: 6px solid $sort-active-color !important;
@@ -72,12 +72,16 @@ td {
                 border-top: 6px solid $sort-color;
                 position: relative;
                 left: 10px;
-                top: 16px;
+                top: 17px;
     
                 &.active {
                     border-top: 6px solid $sort-active-color !important;
                 }
             }
+        }
+
+        td.subgrid-loading-text {
+            text-align: center;
         }
     }
 }
