--- a/src/lib/modules/tree-cell/tree-cell.component.scss
+++ b/src/lib/modules/tree-cell/tree-cell.component.scss
@@ -46,3 +46,20 @@ i.minus {
         margin-left: 6px;
     }
 }
+
+span.childred-loader{
+    border: 3px solid #f3f3f3;
+    -webkit-animation: spin 1s linear infinite;
+    animation: spin 1s linear infinite;
+    border-top: 3px solid #555;
+    border-radius: 50%;
+    width: 10px;
+    height: 10px;
+    display: inline-block;
+    margin-right: 5px;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
