Fix build issues.

--- a/src/lib/modules/subgrid/components/subgrid-body/subgrid-body.component.html
+++ b/src/lib/modules/subgrid/components/subgrid-body/subgrid-body.component.html
@@ -11,7 +11,7 @@
       <db-tree-cell
         [configs]="configs"
         [column]="column"
-        [index]="i"
+        [index]="1"
         [row_data]="child_data"
         [expand_tracker]="expand_tracker"
         [cellclick]="cellclick"
