--- a/src/lib/modules/tree-body/tree-body.component.html
+++ b/src/lib/modules/tree-body/tree-body.component.html
@@ -34,6 +34,8 @@
   [rowselect]="rowselect"
   [rowdeselect]="rowdeselect"
   [expand]="expand"
+  [rowsave]="rowsave"
+  [rowdelete]="rowdelete"
   >
 
   </tr>
