--- a/src/lib/modules/tree-body/tree-body.component.html
+++ b/src/lib/modules/tree-body/tree-body.component.html
@@ -43,7 +43,7 @@
 <ng-container *ngIf="!configs.subgrid">
   <tr 
   *ngFor="let row_data of display_data"
-  [attr.class]="configs.row_class_function(raw_data) + ' ' + (row_data.row_selected ? configs.css.row_selection_class : '')"
+  [attr.class]="configs.row_class_function(row_data) + ' ' + (row_data.row_selected ? configs.css.row_selection_class : '')"
   (click)="selectRow(row_data, $event)" 
   >  
   <ng-container *ngIf="expand_tracker[row_data.parent_pathx]">
