--- a/src/lib/modules/tree-body/components/filter-row/filter-row.component.html
+++ b/src/lib/modules/tree-body/components/filter-row/filter-row.component.html
@@ -5,5 +5,5 @@
     <input type="text" (keyup)="filter()" [(ngModel)]="search_values[column.name]">
   </div>
 </td>
-<!-- Add column to fix UI issue when add row is enabled -->
-<td *ngIf="internal_configs.show_add_row"></td>
+<!-- Add column to fix UI issue when add row is enabled or Edit is enabled -->
+<td *ngIf="internal_configs.show_add_row || (internal_configs.show_parent_col && configs.show_parent_on_edit)"></td>
