Fix renderer issue.

--- a/src/lib/modules/tree-cell/components/tree-cell-view/default/tree-cell-view.component.html
+++ b/src/lib/modules/tree-cell/components/tree-cell-view/default/tree-cell-view.component.html
@@ -1,1 +1,1 @@
-<span>{{column.renderer ? column.renderer(row_data[column.name], row_data) : row_data[column.name]}}</span>
+<span [innerHTML]="column.renderer ? column.renderer(row_data[column.name], row_data) : row_data[column.name]"></span>
