Add header_renderer for column.

--- a/src/lib/modules/tree-head/tree-head.component.html
+++ b/src/lib/modules/tree-head/tree-head.component.html
@@ -12,7 +12,7 @@
     <span *ngIf="internal_configs.show_add_row || !configs.actions.add">Actions</span>
   </th>
   <th *ngFor="let column of columns" [ngClass]="{'column-hide': column.hidden}" [attr.width]="column.width">
-    <div>{{column.header}}</div>    
+    <div [innerHTML]="column.header_renderer ? column.header_renderer(column.header) : column.header"></div>    
   </th>
   <th *ngIf="(configs.show_parent_on_edit && internal_configs.show_parent_col) || internal_configs.show_add_row">
     Parent
