Add cursor pointer for action column.

--- a/src/lib/modules/tree-head/tree-head.component.scss
+++ b/src/lib/modules/tree-head/tree-head.component.scss
@@ -22,6 +22,9 @@ tr {
         }
 
         &.action-column {
+            span.icon-container {
+                cursor: pointer;
+            }
         }
 
         i.plus {
