--- a/src/lib/modules/tree-head/tree-head.component.html
+++ b/src/lib/modules/tree-head/tree-head.component.html
@@ -8,7 +8,9 @@
     class="action-column"
     width="{{configs.action_column_width}}"
     (click)="addRow()">
-    <i *ngIf="!internal_configs.show_add_row && configs.actions.add" [ngClass]="configs.css.add_class" aria-hidden="true" title="Add a row"></i>
+    <span class="icon-container">
+      <i *ngIf="!internal_configs.show_add_row && configs.actions.add" [ngClass]="configs.css.add_class" aria-hidden="true" title="Add a row"></i>
+    </span>
     <span *ngIf="internal_configs.show_add_row || !configs.actions.add">Actions</span>
   </th>
   <th *ngFor="let column of columns" [ngClass]="{'column-hide': column.hidden}" [attr.width]="column.width">
