--- a/src/lib/modules/tree-cell/tree-cell.component.scss
+++ b/src/lib/modules/tree-cell/tree-cell.component.scss
@@ -9,46 +9,13 @@ span.no-expand-icon {
     width: 14px;
 }
 
-i.plus {
-    border: 1px solid rgba(0, 0, 0, 0);
-    margin-right: 32px;
+span.expand-icon-container {
+    position: relative;
+    cursor: pointer;
+    margin: 0 5px 0 0;
 
-    &:before {
-        content: '';
-        width: 18px;
-        height: 1px;
-        border-top: 2px solid $icon-border-color;
-        display: block;
-        position: absolute;
-        margin-top: -15px;
-        margin-left: 6px;
-    }
-
-    &:after {
-        content: '';
-        width: 1px;
-        height: 18px;
-        border-right: 2px solid $icon-border-color;
-        display: block;
-        position: absolute;
-        margin-top: -23px;
-        margin-left: 14px;
-    }
-}
-
-i.minus {
-    border: 1px solid rgba(0, 0, 0, 0);
-    margin-right: 32px;
-
-    &:before {
-        content: '';  
-        width: 18px;
-        height: 1px;
-        border-top: 2px solid $icon-border-color;
-        display: block;
-        position: absolute;
-        margin-top: -15px;
-        margin-left: 6px;
+    span.inbuild-icon {
+        font-size: 25px;
     }
 }
 
