--- a/src/lib/modules/tree-cell/components/tree-cell-editor/default/cell-editor/tree-cell-editor.component.scss
+++ b/src/lib/modules/tree-cell/components/tree-cell-editor/default/cell-editor/tree-cell-editor.component.scss
@@ -3,6 +3,7 @@ input.cell-default {
     padding: 5px;
     box-sizing: border-box;
     width: 100%;
+    border: 1px solid #d1cece;
 }
 
 input.expandable-editor {
