--- a/src/lib/modules/tree-body/components/filter-row/filter-row.component.scss
+++ b/src/lib/modules/tree-body/components/filter-row/filter-row.component.scss
@@ -1,16 +1,14 @@
 @import '../../tree-body.component.scss';
 
 td {
-    border: 1px solid #cdd5dc;
     vertical-align: middle;
     position: relative;
     padding: 0.2rem;
 
     input {
-        width: 100%;
-        padding: 0.1rem;
+        padding: 5px;
         box-sizing: border-box;
-        -webkit-box-sizing:border-box;
-        -moz-box-sizing: border-box;
+        width: 100%;
+        border: 1px solid #d1cece;
     }
 }
