--- a/src/lib/modules/tree-body/components/add-row/add-row.component.html
+++ b/src/lib/modules/tree-body/components/add-row/add-row.component.html
@@ -1,5 +1,5 @@
 <td *ngIf="configs.multi_select"></td>
-<td>
+<td class="action-column">
   <div class="icon-container">
     <span
       (click)="saveAddRecord($event)"
